@@ -25,13 +25,21 @@
 
 
 /**
+ * Fills category into given category store
+ */
+GtkListStore
+*fill_category_store (ezeedo_wrapper_structure *ezeedo,
+                      category_container       *category_list,
+                      gint                      type);
+
+
+/**
  * Creates widget containing categorylist
  */
 GtkWidget
 *display_category (ezeedo_wrapper_structure *ezeedo,
-                   category_container       *category_list,
-                   const char              *category_name,
-                   gint                      type);
+                   GtkListStore*             categories_store,
+                   const char               *category_name);
 
 /**
  * Creates widget containing a show all option
@@ -46,13 +54,6 @@ gboolean
 category_contains_open_tasks (ezeedo_wrapper_structure *ezeedo,
                               gint                      id,
                               gint                      type);
-
-/**
- * Shows all tasks and resets any category selections
- */
-void
-show_all (GtkTreeSelection *category_selection,
-          gpointer          user_data);
 
 
 #endif // CATEGORYLIST_H
