@@ -1,4 +1,11 @@
 -----------------------------------------------------------------------
+Ezeedo 0.2 (black country rock) - 25 February 2015
+-----------------------------------------------------------------------
+- simplified some of the code
+- gear menu now has gear icon 
+- gear menu soon will get hamburger icon ;)
+
+-----------------------------------------------------------------------
 Ezeedo 0.2 (black country rock) - 18 February 2015
 -----------------------------------------------------------------------
 - sidebar visibility can be toggled now
